--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
-  "useTabs": true,
-  "singleQuote": true,
-  "trailingComma": "none",
-  "semi": false,
-  "printWidth": 100,
-  "plugins": ["prettier-plugin-tailwindcss"],
-  "pluginSearchDirs": false
+	"useTabs": true,
+	"singleQuote": false,
+	"trailingComma": "none",
+	"semi": true,
+	"printWidth": 100,
+	"plugins": ["prettier-plugin-tailwindcss"],
+	"pluginSearchDirs": false
 }
